[gd_scene load_steps=5 format=3 uid="uid://dxample123main"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://b8yqkj3qxqxqx" path="res://scenes/player.tscn" id="2"]
[ext_resource type="Script" path="res://scripts/wheel.gd" id="3"]
[ext_resource type="Script" path="res://scripts/game_ui.gd" id="4"]

[node name="Main" type="Node2D"]
script = ExtResource("1")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="Sky" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.1, 0.1)
motion_mirroring = Vector2(1280, 0)

[node name="SkyColor" type="ColorRect" parent="ParallaxBackground/Sky"]
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0.53, 0.81, 0.92, 1)

[node name="Mountains" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.3, 0.3)
motion_mirroring = Vector2(1280, 0)

[node name="MountainColor" type="ColorRect" parent="ParallaxBackground/Mountains"]
offset_top = 400.0
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0.4, 0.5, 0.4, 1)

[node name="Ground" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.6, 0.6)
motion_mirroring = Vector2(1280, 0)

[node name="GroundColor" type="ColorRect" parent="ParallaxBackground/Ground"]
offset_top = 600.0
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0.3, 0.6, 0.3, 1)

[node name="Player" parent="." instance=ExtResource("2")]
position = Vector2(0, 0)

[node name="Portals" type="Node2D" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, 0)
zoom = Vector2(1, 1)

[node name="UILayer" type="CanvasLayer" parent="."]
script = ExtResource("4")

[node name="ScoreLabel" type="Label" parent="UILayer"]
offset_left = 20.0
offset_top = 20.0
offset_right = 200.0
offset_bottom = 60.0
theme_override_font_sizes/font_size = 24
text = "Score: 0"

[node name="WrongLabel" type="Label" parent="UILayer"]
offset_left = 20.0
offset_top = 60.0
offset_right = 200.0
offset_bottom = 100.0
theme_override_font_sizes/font_size = 24
text = "Wrong: 0/3"

[node name="Wheel" type="Node2D" parent="UILayer"]
position = Vector2(150, 500)
script = ExtResource("3")

[node name="Segments" type="Node2D" parent="UILayer/Wheel"]

[node name="GameOverPanel" type="Panel" parent="UILayer"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="FinalScoreLabel" type="Label" parent="UILayer/GameOverPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -60.0
offset_right = 100.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "Final Score: 0"
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="UILayer/GameOverPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = 20.0
offset_right = 75.0
offset_bottom = 70.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "Restart"

[node name="TouchControls" type="Control" parent="UILayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 1280.0
offset_bottom = 720.0

[node name="RotateLeftButton" type="Button" parent="UILayer/TouchControls"]
layout_mode = 0
offset_left = 900.0
offset_top = 600.0
offset_right = 1000.0
offset_bottom = 700.0
theme_override_font_sizes/font_size = 32
text = "◄"

[node name="RotateRightButton" type="Button" parent="UILayer/TouchControls"]
layout_mode = 0
offset_left = 1020.0
offset_top = 600.0
offset_right = 1120.0
offset_bottom = 700.0
theme_override_font_sizes/font_size = 32
text = "►"
